--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -42,7 +42,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: https://github.com/Eipatrick/Portfolio_cartografia  # Corrigido para o URL correto do GitHub Pages
     runs-on: ubuntu-latest
     needs: build
     steps:
